Fix navbar appearance on mobile

--- a/assets/css/default_style.css
+++ b/assets/css/default_style.css
@@ -11,6 +11,7 @@ body{
     font-family: 'PT Sans Narrow', Arial, sans-serif;
     font-size:14px;
     overflow:auto;
+    overflow-x: hidden;
     width:100%;
     position:relative;
     z-index:80;
