--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -29,3 +29,7 @@
 .dropdown-menu{
 	width: 15em;
 }
+
+.navbar-collapse{
+	background-color: #000000;
+}
